CAMPP into functions and roxygen documentation
Former-commit-id: 4298bf09cb2db547977a00aed8ecf52730b87286 [formerly cbe95c56593a2a4979160742105ba69aa53f3c26]
Former-commit-id: 31b2909912c8d80e50abb27773a9137b289acf64
Former-commit-id: 1f01daa60059d79582e45f89e81786ee2156ed54
Former-commit-id: 9debff72e52c6ad21086c7dbcf0e68a4862c79bc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(TrimWriteInt)
 export(WGCNAAnalysis)
 export(chunk2)
 export(number_ticks)
+export(runCampp2)
 import(WGCNA)
 import(biomaRt)
 import(data.table)
@@ -48,3 +49,4 @@ import(survcomp)
 import(survminer)
 import(sva)
 import(viridis)
+importFrom(viridisLite,viridis)
