fixes of Matteo's PR comments
Former-commit-id: 0b7df5b8a0739597952a385b2523cc5d387f607c [formerly 8374cc09df9019cb09eba53bc4675f413aa6d24d]
Former-commit-id: 20aefa2ce5b7114f0e203615e8b70fbbc9eb3d63
Former-commit-id: 47aad4c899936b06f82461406cdfb8a2f6e00b3b
Former-commit-id: ba36cf3328cff526d1a1c7664f551559c1921cd7

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,10 +22,10 @@ export(ReadMyFile)
 export(ReplaceNAs)
 export(ReplaceZero)
 export(SplitList)
+export(SurvivalCOX)
 export(TextOutput)
 export(TrimWriteInt)
 export(WGCNAAnalysis)
-export(chunk2)
 export(number_ticks)
 export(runCampp2)
 import(WGCNA)
@@ -50,3 +50,4 @@ import(survminer)
 import(sva)
 import(viridis)
 importFrom(viridisLite,viridis)
+import(edgeR)
