new import functions; addition of test data and processing scripts
Former-commit-id: 2fcfce38794c6e089c48e0535657a575c7672318 [formerly 45889a5acce1cb32bca8e4d3318142ee13c919e9]
Former-commit-id: 48cd173effce89d6f74469f8e52ea920abb2b387
Former-commit-id: 23a5ff59a52d8ec7d4e10fa2fd617aacfa4ef6e9
Former-commit-id: b2300d2ced692c8511cdb8afff814ce522a90dd5

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ export(SurvivalCOX)
 export(TextOutput)
 export(TrimWriteInt)
 export(WGCNAAnalysis)
+export(importCounts)
+export(importMetadata)
 export(number_ticks)
 export(runCampp2)
 import(WGCNA)
@@ -50,4 +52,3 @@ import(survminer)
 import(sva)
 import(viridis)
 importFrom(viridisLite,viridis)
-import(edgeR)
