--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(SurvivalCOX)
 export(TextOutput)
 export(TrimWriteInt)
 export(WGCNAAnalysis)
+export(extract_tumor_normal_samples)
 export(importCounts)
 export(importMetadata)
 export(number_ticks)
@@ -34,6 +35,7 @@ import(WGCNA)
 import(biomaRt)
 import(data.table)
 import(devtools)
+import(dplyr)
 import(fitdistrplus)
 import(ggplot2)
 import(glmnet)
