Added function for parsing the arguments
Former-commit-id: 66ac96212a4678013ed0b2b372725673af6e42cd [formerly e7536647a62ed79f13839e40d314784b7df7430b]
Former-commit-id: 0adccef518bcfa3ad9af6c2c29aa734be4a85395
Former-commit-id: 1b206b6723343a71e0c136330c293b1e2f9e01ff
Former-commit-id: c30baa6383785c7ba037b6cb27e073a604953d3e

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,10 @@ export(WGCNAAnalysis)
 export(extract_tumor_normal_samples)
 export(importCounts)
 export(importMetadata)
+export(parseArguments)
+export(parseArguments2)
 export(runCampp2)
+export(runCampp2_dev)
 import(WGCNA)
 import(biomaRt)
 import(data.table)
