--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(SurvivalCOX)
 export(TextOutput)
 export(TrimWriteInt)
 export(WGCNAAnalysis)
+export(checkZeros)
 export(extract_tumor_normal_samples)
 export(importCounts)
 export(importMetadata)
