--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(SurvivalCOX)
 export(TextOutput)
 export(TrimWriteInt)
 export(WGCNAAnalysis)
+export(batchCorrect)
 export(extract_tumor_normal_samples)
 export(importCounts)
 export(importMetadata)
@@ -53,4 +54,5 @@ import(survcomp)
 import(survminer)
 import(sva)
 import(viridis)
+import(zeallot)
 importFrom(viridisLite,viridis)
