added Function for distribution check
Former-commit-id: 62124bcddbd9d15be49eb8aa9dba52fc5a4c67ab [formerly 26d4005314d3889735c3b0de4adce71a4e48a702]
Former-commit-id: 3db2f8c5e2ee966348265528408473978ad1ed2d
Former-commit-id: 47c6e927ea1fe4eb391b95e0e3ac5ed8ee3eb110
Former-commit-id: 27b4ff9521d32846ecad828f56e1abddd5938e03

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,10 +27,12 @@ export(SurvivalCOX)
 export(TextOutput)
 export(TrimWriteInt)
 export(WGCNAAnalysis)
+export(checkDistr)
 export(extract_tumor_normal_samples)
 export(importCounts)
 export(importMetadata)
 export(runCampp2)
+import("")
 import(WGCNA)
 import(biomaRt)
 import(data.table)
