implemented comments from the PR (functions for parsing arguments + appropriate naming in the main function)
Former-commit-id: ca7a97eb5f8ceb6d0b579a9b3420f5ad5fd2bb2f [formerly 9ccb9bd7a024edcb0430291c6d3af93cff95297b]
Former-commit-id: 5235cfdda6b9e16eb3bb2da52c2dd50be129cf43
Former-commit-id: 44a416a7842d0bb8e22a1dde144494e84ae1efbd
Former-commit-id: 4838bc52745ddac462f6acc477f62afc93295a04

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,13 +27,12 @@ export(SurvivalCOX)
 export(TextOutput)
 export(TrimWriteInt)
 export(WGCNAAnalysis)
+export(batchCorrect)
 export(extract_tumor_normal_samples)
 export(importCounts)
 export(importMetadata)
 export(parseArguments)
-export(parseArguments2)
 export(runCampp2)
-export(runCampp2_dev)
 import(WGCNA)
 import(biomaRt)
 import(data.table)
@@ -56,4 +55,5 @@ import(survcomp)
 import(survminer)
 import(sva)
 import(viridis)
+import(zeallot)
 importFrom(viridisLite,viridis)
