rebase and minor changes
Former-commit-id: e8f7c20abceb933bd14d988b66ca8a0679dd5818 [formerly 578789b8e9cbe720f69a5e7100db576ba2a5e83b]
Former-commit-id: 5a59afab5c8320fd7b9c62e763849db64c181b4f
Former-commit-id: f11541c61d60eeb6c7fb833dcbe0633b9558582a
Former-commit-id: b14e616858b038ef19c2c0d9bf66e25d0c23e896

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,12 +22,12 @@ export(PlotInt)
 export(PlotKmeans)
 export(ReplaceNAs)
 export(ReplaceZero)
+export(ReplaceZerosApply)
 export(SplitList)
 export(SurvivalCOX)
 export(TextOutput)
 export(TrimWriteInt)
 export(WGCNAAnalysis)
-export(checkZeros)
 export(batchCorrect)
 export(extract_tumor_normal_samples)
 export(importCounts)
