Making a new function for differential expression analysis
Former-commit-id: da546992ef2473331fc4b45a03ac1d8e5ae3356c [formerly b297d40f5d6609feb096f6966df39b4ad9b75659]
Former-commit-id: d4119834ef5af857a0286483cfaf6294329087c6
Former-commit-id: 2498f61f7742670c9af0bad70804d868e672235b
Former-commit-id: d25b0076c776a7cf9f853d9df07551dc37d1bc5c

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(PlotInt)
 export(PlotKmeans)
 export(ReplaceNAs)
 export(ReplaceZero)
+export(RunDA)
 export(SplitList)
 export(SurvivalCOX)
 export(TextOutput)
