--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(SurvivalCOX)
 export(TextOutput)
 export(TrimWriteInt)
 export(WGCNAAnalysis)
+export(applyNormalization)
 export(batchCorrect)
 export(extract_tumor_normal_samples)
 export(importCounts)
@@ -48,6 +49,7 @@ import(limma)
 import(mclust)
 import(multiMiR)
 import(openxlsx)
+import(pcaMethods)
 import(plyr)
 import(scales)
 import(squash)
