Function for differential expression/abundance analysis was taken from CAMPP2.R and turned into a new function called RunDEA.
Former-commit-id: 9e3e87e8c441f2c1bd3c55c8fcb0241089be424f [formerly 55905f95008c8e7be28d7a7589d7df9ae18f98e8]
Former-commit-id: 3c5d620882177459d286c063fc83affa25a7f428
Former-commit-id: 8c69aa407a3fee95cd2526848b8fb6928b133e63
Former-commit-id: e82b6d9a0c6e7a56b859bbf54235627cce6deb25

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,7 @@ export(PlotInt)
 export(PlotKmeans)
 export(ReplaceNAs)
 export(ReplaceZero)
-export(RunDA)
+export(RunDEA)
 export(SplitList)
 export(SurvivalCOX)
 export(TextOutput)
