Function for differential expression/abundance analysis was taken from CAMPP2.R and turned into a new function called RunDEA - including subfunctions DEA_Feature & DEA_Feature_apply.
Former-commit-id: 4b2b9a2cde7c444a7beaf01713837c3187bb196a [formerly 1b7f3c4f52b4d0dfdf7422963dabfc51fb3ef23e]
Former-commit-id: 11b729e5410863617d564a988e5dd0db2a0921b1
Former-commit-id: 6f28a706466e54c16906cd95e05d93c3fe18b649
Former-commit-id: 339c3bbd01f26d2276f1071c5c239dfa15585b44

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,8 @@
 
 export(CorrAnalysis)
 export(CorrelationPlots)
-export(DAFeature)
-export(DAFeatureApply)
+export(DEAFeature)
+export(DEAFeatureApply)
 export(DFtoList)
 export(DownloadPPInt)
 export(EstimateKmeans)
