--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,13 +27,12 @@ export(SurvivalCOX)
 export(TextOutput)
 export(TrimWriteInt)
 export(WGCNAAnalysis)
-export(applyNormalization)
 export(batchCorrect)
 export(extract_tumor_normal_samples)
 export(importCounts)
 export(importMetadata)
 export(parseArguments)
-export(runCampp2)
+export(runCampp2_2)
 import(WGCNA)
 import(biomaRt)
 import(data.table)
