--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,7 @@ export(extract_tumor_normal_samples)
 export(importCounts)
 export(importMetadata)
 export(parseArguments)
-export(runCampp2_2)
+export(runCampp2)
 import(WGCNA)
 import(biomaRt)
 import(data.table)
