Committing changes to fix34 before merging with branch for fix33
Former-commit-id: 0c2986c2f3aea523fe3c2d2499af6b636b501077 [formerly 0c5d9da95f431a99d00040e94230c694aa526c70]
Former-commit-id: f830c42b90cde69aabbe64f8d77ab3aa70e8480a
Former-commit-id: 0b2c346dced9012eddf87984882e8e8726c30052
Former-commit-id: f87251636888b92ef707521973e425c52aec8a56

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(DEAFeatureApply)
 export(DFtoList)
 export(DownloadPPInt)
 export(EstimateKmeans)
+export(ExportDEA)
 export(FitDistributions)
 export(GetColors)
 export(GetDeaPPInt)
@@ -25,7 +26,6 @@ export(ReplaceZero)
 export(RunDEA)
 export(SplitList)
 export(SurvivalCOX)
-export(TextOutput)
 export(TrimWriteInt)
 export(WGCNAAnalysis)
 export(batchCorrect)
