zeallot added to DESCRIPTION
Former-commit-id: a09ee9133d9e0d5b2b70d17c4190a594a2120e29 [formerly 81bd7b3207ea49a1d5331e7d28e2201f66d96212]
Former-commit-id: 8a55d0d9c8580a3d9e7afd0da8221f8188363a28
Former-commit-id: 4cf214a9866a40d17aae33809ca522208046d132
Former-commit-id: ec4a33e6a68beb89503d37e6b4d86419ba885b4b

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,7 +46,8 @@ Imports:
  multiMiR,  
  biomaRt,  
  doMC,  
- nnet 
+ nnet,
+ zeallot
 exports:
 VignetteBuilder: knitr
 Suggests: BiocStyle, knitr, rmarkdown
