minor changes in DESCRIPTION, cammp2_exampleRun.R, etc
Former-commit-id: c913106c80804880963550594edaf0e121143d10 [formerly 28a99c0509c672b5180186f1bc86a2ca4cda02d5]
Former-commit-id: 00a4b59fad8a7d452b0d86705e18ca3c548a6bf1
Former-commit-id: 740d5ccfdba8d72da1482bacfbe25c4c05ac34a7
Former-commit-id: d1f0dd63acb472ebf0de33525cf6fd2826bfbc6d

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,7 +47,8 @@ Imports:
  biomaRt,  
  doMC,  
  nnet,
- zeallot
+ zeallot,
+ igraph
 exports:
 VignetteBuilder: knitr
 Suggests: BiocStyle, knitr, rmarkdown
