Adding new Heatmap using ComplexHeatmap library
Former-commit-id: 9066e7643cf9569b328f0498beea688811af8195 [formerly 496c58d64864d33e6764dca1d407b542b4d85398]
Former-commit-id: 7a618e7a3b41f04b0fc2052b5e9ce24de4db39ed
Former-commit-id: a7a50f1bd2f1c9815a957f47adfb4095916d8a76
Former-commit-id: b248689c5f409ed981b64f9134a0f9d4b4939c2d

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(GetGeneMiRNAInt)
 export(LASSOFeature)
 export(MDSPlot)
 export(MakeHeatmap)
+export(MakeUpset)
 export(MakeVolcano)
 export(MatchPPGmiRInt)
 export(ModuleIC)
