add test function and removel of data.original from the function
Former-commit-id: 718079224c46b53138b9e7aefb2bd396d7ed2ac1 [formerly 86a42587ae06d4ef6f156a6b4923cb5b3c6bc335]
Former-commit-id: 1c3a72ac333339eaadbcaacab55519e4ba8bffea
Former-commit-id: c1cf8356ef702e2e03a3bbb934ffa242cc478f93
Former-commit-id: 375757bde77b0561ae8a5ca0f00176a6ecbb721f

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(DFtoList)
 export(DownloadPPInt)
 export(EstimateKmeans)
 export(FitDistributions)
+export(FixZeros)
 export(GetColors)
 export(GetDeaPPInt)
 export(GetGeneMiRNAInt)
@@ -21,8 +22,6 @@ export(PlotDistributions)
 export(PlotInt)
 export(PlotKmeans)
 export(ReplaceNAs)
-export(ReplaceZero)
-export(ReplaceZerosApply)
 export(SplitList)
 export(SurvivalCOX)
 export(TextOutput)
