Testing blocking variable and fixing DESCRIPTION/NAMESPACE after downloading the new conda env
Former-commit-id: 6afeed46a0124bfb061c9b5a2e33b377bfb8dda2 [formerly 55d6fc3451986e896e124fe69d068b2a46dfd1d4]
Former-commit-id: 744d5298a9a010767722245c22a879a0ca7856ca
Former-commit-id: 5f7c0c34961fb6df210dceb30bb212a995175fa7
Former-commit-id: 4cbd04b19871d7e63115dfefb3ab9344fc861263

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,7 +42,6 @@ import(dplyr)
 import(fitdistrplus)
 import(ggplot2)
 import(glmnet)
-import(heatmap.plus)
 import(igraph)
 import(impute)
 import(limma)
@@ -52,8 +51,8 @@ import(openxlsx)
 import(plyr)
 import(scales)
 import(squash)
+import(statmod)
 import(survcomp)
-import(survminer)
 import(sva)
 import(viridis)
 import(zeallot)
