--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,25 +16,25 @@ Description: The CAncer bioMarker Prediction Pipeline2 (CAMPP2) is a simple
 License: GPL
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 biocViews:
 Depends: R (>= 4.0.0)
 Imports:
  limma,
+ statmod,
  edgeR,
  glmnet,
  sva, 
  openxlsx, 
- ggplot2,  
+ ggplot2,
+ SummarizedExperiment,
  gridExtra,  
- heatmap.plus,  
  plyr,  
  dplyr,
  data.table,  
  viridis,
  squash,  
  survcomp,  
- survminer,  
  scales,  
  rms,  
  GO.db,  
@@ -47,10 +47,8 @@ Imports:
  mclust,  
  multiMiR,  
  biomaRt,  
- arcdiagram,  
  doMC,  
- knor,  
- nnet 
+ nnet,
 exports:
 VignetteBuilder: knitr
 Suggests: BiocStyle, knitr, rmarkdown
