--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(LASSOFeature)
 export(MDSPlot)
 export(MakeHeatmap)
 export(MakeUpset)
+export(MakeVennDiagram)
 export(MakeVolcano)
 export(MatchPPGmiRInt)
 export(ModuleIC)
@@ -37,6 +38,7 @@ export(importMetadata)
 export(parseArguments)
 export(runCampp2)
 import(ComplexHeatmap)
+import(VennDiagram)
 import(WGCNA)
 import(biomaRt)
 import(data.table)
@@ -46,7 +48,6 @@ import(fitdistrplus)
 import(ggplot2)
 import(ggrepel)
 import(glmnet)
-import(heatmap.plus)
 import(igraph)
 import(impute)
 import(limma)
@@ -57,7 +58,6 @@ import(plyr)
 import(scales)
 import(squash)
 import(survcomp)
-import(survminer)
 import(sva)
 import(viridis)
 import(zeallot)
