Updated DESCRIPTION file
Former-commit-id: b6740adc482d5031401959f271ae54541d90e96d [formerly 974007e591c39c0f643be611e90a1181b173439b]
Former-commit-id: fa19740a9ce58c41754f3568834846b1c62c4778
Former-commit-id: 9d907e0e28abaf45ddbb3499d658db8c8ba1333a
Former-commit-id: aca587c21871ad6aa79fc6d2d1a2a5ab314654d6

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Imports:
  glmnet,
  sva, 
  openxlsx, 
- ggplot2,  
+ ggplot2,
+ ggrepel,
  gridExtra,  
  plyr,  
  dplyr,
@@ -41,7 +42,8 @@ Imports:
  impute,  
  pcaMethods,  
  pROC,  
- VennDiagram,  
+ VennDiagram,
+ ComplexHeatmap,
  mclust,  
  multiMiR,  
  biomaRt,  
