--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: CAMPP2
 Type: Package
 Title: CAncer bioMarker Prediction Pipeline 2 (CAMPP2)
 Version: 0.1.0
-Author: Nikola Tom, Thilde Bagger Terkelsen
+Author: Nikola Tom
 Maintainer: Nikola Tom <1nikola.tom@gmail.com>
 Description: The CAncer bioMarker Prediction Pipeline2 (CAMPP2) is a simple
   bioinformatics tool intended to automatize identification of potential
