fix documentation and example data
Former-commit-id: 4e19df1ac9ec3e471192918d821a0207a36d479b [formerly b476095447c9ef22621f17c7d4af47b5d6b4ff2e]
Former-commit-id: 6f5ae418b46c64a0bfd0fbbd5eca0d08e50e4ce2
Former-commit-id: 4c97d69807c2eccb2b595326e970abe99dace278
Former-commit-id: 7976e4fcb72783d220c9fa8902adcb19ed6d9d4d

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ import(biomaRt)
 import(data.table)
 import(devtools)
 import(dplyr)
+import(edgeR)
 import(fitdistrplus)
 import(ggplot2)
 import(glmnet)
