First revision of PR48.
Former-commit-id: 3191b963fee98d447335f9412ea22ba57f0d664e [formerly 311c5758cd7800a3cd5f0d9a70e40f395af8844b]
Former-commit-id: a6838a13f93309ef2602f507573a6417109dd33a
Former-commit-id: a460ddac9be16918dc194094ce12aa3019131264
Former-commit-id: b135457deabaa5bb39fcc9e6743816ec88299b49

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ import(fitdistrplus)
 import(ggplot2)
 import(ggrepel)
 import(glmnet)
+import(grid)
 import(igraph)
 import(impute)
 import(limma)
