--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,12 +34,16 @@ export(importCounts)
 export(importMetadata)
 export(parseArguments)
 export(runCampp2)
+export(runKmeans)
+import(FactoMineR)
+import(M3C)
 import(WGCNA)
 import(biomaRt)
 import(data.table)
 import(devtools)
 import(dplyr)
 import(edgeR)
+import(factoextra)
 import(fitdistrplus)
 import(ggplot2)
 import(glmnet)
