refactoring LASSO function
Former-commit-id: 2010b1a9f7108f83de7304128eb0617a3f5f5712 [formerly ff1d53223a2f581bb617353007bca8704b994465]
Former-commit-id: 5eb45cce54af11d3ae0057cf71e8cc9183d9af6b
Former-commit-id: 8e3542ae650ce4544b131cf753dbfa5c7250ab0d
Former-commit-id: 6d8c800db3b1ac3908b2e2d768067c76777a47f2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,12 +34,17 @@ export(importCounts)
 export(importMetadata)
 export(parseArguments)
 export(runCampp2)
+export(runKmeans)
+export(runLASSO)
+import(FactoMineR)
 import(WGCNA)
 import(biomaRt)
 import(data.table)
 import(devtools)
+import(doMC)
 import(dplyr)
 import(edgeR)
+import(factoextra)
 import(fitdistrplus)
 import(ggplot2)
 import(glmnet)
@@ -49,6 +54,7 @@ import(limma)
 import(mclust)
 import(multiMiR)
 import(openxlsx)
+import(parallel)
 import(pcaMethods)
 import(plyr)
 import(scales)
