--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(CorrelationPlots)
 export(DEAFeature)
 export(DEAFeatureApply)
 export(DFtoList)
+export(Design.Matrix)
 export(DownloadPPInt)
 export(EstimateKmeans)
 export(ExportDEA)
