DEA visualisation big fix
Former-commit-id: cbe2ccacb384ccd672f2d26375d8d5b697ee3455 [formerly f0583edf1a5c8fe04d8b6f4363ac8bf304d28a44]
Former-commit-id: c76e3d75586f6a14a48d9548c792fabdc1d366ca
Former-commit-id: 68039e4a1d9cee39d1fd8f487b36ea999a10ec67
Former-commit-id: 2c55791a2ee07af20e630e9741e4a561d710841e
Former-commit-id: 44c907b620538e51c3982fd3741c5fb0a77cb120

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,8 @@ export(PlotInt)
 export(PlotKmeans)
 export(ReplaceNAs)
 export(RunDEA)
+export(RunDEAVisuals)
+export(RunHeatmap)
 export(SplitList)
 export(SurvivalCOX)
 export(TrimWriteInt)
@@ -70,5 +72,6 @@ import(statmod)
 import(survcomp)
 import(sva)
 import(viridis)
+import(viridisLite)
 import(zeallot)
 importFrom(viridisLite,viridis)
