add wrapper for DEA-LASSO consensus, add documentation, minor code fix
Former-commit-id: e0ecf32c8078ba23a4342adee0dd3c300febfdf0 [formerly d2e9c459681e080e421473c0a0451073bc017e61]
Former-commit-id: de07b3a69c799d5709cf83dd6ec65b20fb5f24ae
Former-commit-id: b7ee9fefca10ce72efb1c44029e8f1a7849f425f
Former-commit-id: 381e17f8487b4de7042f1389df538dd57cf513de

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(PlotInt)
 export(PlotKmeans)
 export(ReplaceNAs)
 export(RunDEA)
+export(RunDEA_LASSO_consensus)
 export(SplitList)
 export(SurvivalCOX)
 export(TrimWriteInt)
@@ -34,9 +35,8 @@ export(importCounts)
 export(importMetadata)
 export(parseArguments)
 export(runCampp2)
-export(runKmeans)
 export(runLASSO)
-import(FactoMineR)
+import(VennDiagram)
 import(WGCNA)
 import(biomaRt)
 import(data.table)
@@ -44,16 +44,17 @@ import(devtools)
 import(doMC)
 import(dplyr)
 import(edgeR)
-import(factoextra)
 import(fitdistrplus)
 import(ggplot2)
 import(glmnet)
+import(grid)
 import(igraph)
 import(impute)
 import(limma)
 import(mclust)
 import(multiMiR)
 import(openxlsx)
+import(pROC)
 import(parallel)
 import(pcaMethods)
 import(plyr)
