adding random forest
Former-commit-id: 8c7cbb6d22373838cd2cea8d1bc873ba59635331 [formerly d49e7f5e066afc02b9aa47d283ab20d07a54ff1d]
Former-commit-id: 78fb54deac278cf49cf6bc365d0e8a5a5f5c7a16
Former-commit-id: 47ca43005b33de89faa9594b1565bbea389d6455
Former-commit-id: 750d8e730dd595c87ad31ccf6d1554bee66bdb44
Former-commit-id: 56ba19021cf52d3917e625421505707ad5cb5efb

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,7 +55,10 @@ Imports:
  doMC,  
  nnet,
  zeallot,
- igraph
+ igraph,
+ varSelRF,
+ randomForest,
+ caret	
 exports:
 VignetteBuilder: knitr
 Suggests: BiocStyle, knitr, rmarkdown
