--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(EstimateKmeans)
 export(ExportDEA)
 export(FitDistributions)
 export(FixZeros)
+export(Forest_Features)
 export(GetColors)
 export(GetDeaPPInt)
 export(GetGeneMiRNAInt)
@@ -29,6 +30,7 @@ export(PCAPlot)
 export(PlotDistributions)
 export(PlotInt)
 export(PlotKmeans)
+export(RF_Apply)
 export(ReplaceNAs)
 export(RunDEA)
 export(RunDEAVisuals)
@@ -50,6 +52,7 @@ import(FactoMineR)
 import(VennDiagram)
 import(WGCNA)
 import(biomaRt)
+import(caret)
 import(data.table)
 import(devtools)
 import(doMC)
@@ -72,11 +75,13 @@ import(parallel)
 import(pca3d)
 import(pcaMethods)
 import(plyr)
+import(randomForest)
 import(scales)
 import(squash)
 import(statmod)
 import(survcomp)
 import(sva)
+import(varSelRF)
 import(viridis)
 import(viridisLite)
 import(zeallot)
