addition of meanCounts function
Former-commit-id: 82bc897930a0d42dadb3afd78aef8ef26a7a9bd9 [formerly c0c43e0ddc1061cba76e6e3f7815147682b3020a]
Former-commit-id: 15dc1839e095c85912ed8f624c1061be1086898a
Former-commit-id: 2248a26e908f604d7ffccf0af3aa1aef3af8984c
Former-commit-id: 99dbbb6db705f5afbced8cd9997935c6813abbde
Former-commit-id: bf22ed629d4ae51314db6183052fad592e85841f

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(WGCNAAnalysis)
 export(extract_tumor_normal_samples)
 export(importCounts)
 export(importMetadata)
+export(meanCounts)
 export(parseArguments)
 export(runCampp2)
 export(runKmeans)
