updated random forest according to revisions
Former-commit-id: cacd9ca1d22d58d370137c9d7039595596b7796a [formerly f248066734eb2f703f219264e9e669124fde23cd]
Former-commit-id: 6a363ae061f08d6cc47edc8d7d80e3fcbff01298
Former-commit-id: 8ba74496be3e0823466b49c072fd501e4e2bc29c
Former-commit-id: ec21a7982bece66acc1f7027bb132606a96261be
Former-commit-id: 437766d83fc276b51149e6a8bf1706dfe25e6915

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(EstimateKmeans)
 export(ExportDEA)
 export(FitDistributions)
 export(FixZeros)
-export(Forest_Features)
+export(ForestFeatures)
 export(GetColors)
 export(GetDeaPPInt)
 export(GetGeneMiRNAInt)
@@ -30,12 +30,13 @@ export(PCAPlot)
 export(PlotDistributions)
 export(PlotInt)
 export(PlotKmeans)
-export(RF_Apply)
+export(RFApply)
 export(ReplaceNAs)
 export(RunDEA)
 export(RunDEAVisuals)
 export(RunDEA_LASSO_consensus)
 export(RunHeatmap)
+export(RunRF)
 export(SplitList)
 export(SurvivalCOX)
 export(TrimWriteInt)
