DESCRIPTION updated based on NAMESPACE
Former-commit-id: 44a26a7bb9cb99ec4320bb0249c4f9b9e2d9db0f [formerly 58c269c289baad970005c575278c1b2e8dc52072]
Former-commit-id: 5faa7cd0db7753251d5a182fa5b0d6f59c2c8868
Former-commit-id: be6f66f656483ac5f2567dd02ab1954e8c0ee852
Former-commit-id: 9bb147d602a02ff3e1051fb18a291f2446c434f3
Former-commit-id: 31a585ac5ecea1f6c28dbbe2b82c1c48adf498fb
Former-commit-id: e250c07c16304d19f3f348cc7c56e168e8887ad7

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,45 +20,34 @@ RoxygenNote: 7.2.3
 biocViews:
 Depends: R (>= 4.0.0)
 Imports:
- rio,
- factoextra,
- WGCNA,
- M3C,
- FactoMineR,
- statmod,
- edgeR,
- glmnet,
- sva, 
- openxlsx, 
- ggplot2,
- ggrepel,
- gridExtra,  
- plyr,  
- dplyr,
- data.table,  
- viridis,
- squash,  
- survcomp,  
- scales,  
- GO.db,  
- fitdistrplus,  
- impute,  
- pcaMethods,  
- pROC,  
- VennDiagram,
- grid,
- ComplexHeatmap,
- SummarizedExperiment,
- mclust,  
- multiMiR,  
- biomaRt,  
- doMC,  
- nnet,
- zeallot,
- igraph,
- varSelRF,
- randomForest,
- caret	
+  ComplexHeatmap,
+  FactoMineR,
+  VennDiagram,
+  biomaRt,
+  caret,
+  doMC,
+  edgeR,
+  factoextra,
+  fitdistrplus,
+  ggplot2,
+  ggrepel,
+  glmnet,
+  grid,
+  impute,
+  limma,
+  mclust,
+  pROC,
+  parallel,
+  pcaMethods,
+  randomForest,
+  rio,
+  squash,
+  statmod,
+  sva,
+  varSelRF,
+  viridis,
+  viridisLite,
+  zeallot
 exports:
 VignetteBuilder: knitr
 Suggests: BiocStyle, knitr, rmarkdown
