--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ import(parallel)
 import(pcaMethods)
 import(randomForest)
 import(rio)
+import(rngtools)
 import(squash)
 import(statmod)
 import(sva)
