--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,8 +21,7 @@ License: GPL
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
-biocViews: Quantitative data analysis, Gene expression, Statistical analysis
- biological data
+biocViews: GeneExpression, DifferentialExpression, Annotation, Clustering, QualityControl, RNASeq, Metabolomics, SystemsBiology, Software, Transcription, Normalization, PrincipalComponent, Lipidomics, Visualization, Regression, DimensionReduction
 Depends: R (>= 4.1.0)
 Imports:
   ComplexHeatmap,
