--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(AddGeneName)
 export(BatchCorrect)
 export(DEAFeature)
 export(DEAFeatureApply)
-export(DFtoList)
 export(Design.Matrix)
 export(EstimateKmeans)
 export(ExportDEA)
@@ -48,6 +47,7 @@ import(grid)
 import(impute)
 import(limma)
 import(mclust)
+import(nnet)
 import(pROC)
 import(parallel)
 import(pcaMethods)
