--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,7 +50,6 @@ import(nnet)
 import(pROC)
 import(parallel)
 import(pcaMethods)
-import(randomForest)
 import(rio)
 import(rngtools)
 import(squash)
@@ -60,3 +59,4 @@ import(varSelRF)
 import(viridis)
 import(viridisLite)
 import(zeallot)
+importFrom(randomForest, randomForest)
