fixed description in DESCRIPTION
Former-commit-id: 2d30b7ff9c62453182bbd06bcb72cbaa95b3139d [formerly 468f5aaee6bb94d61c6a4010dbb822be25db2275]
Former-commit-id: 5dbd8e54b6323a55f17fd40c19439ede1a4fe0cf
Former-commit-id: ac1f07692532af1b501e4f1346cafe9b49fb1668
Former-commit-id: f43219889e41f9098f40bde436b6e5e1b893a70f
Former-commit-id: 3794ca5d94d0d1574b42f6f770db52636ca78d26
Former-commit-id: f256f72bf662b3225067af4ca889cf29a6e8d688

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,11 @@ Description: The CAncer bioMarker Prediction Pipeline2 (CAMPP2) is a simple
   diagnostic and prognostic cancer biomarkers. The pipeline is versatile
   and may be used for analysis of a variety of quantitative biological
   data from high throughput platforms, including genes, proteins, small
-  RNAs, lipids and glycans. CAMPP2 currently supports; differential expression/
-  abundance analysis, LASSO/Elastic Net regression,Weighed
-  Gene Co-expression Network Analysis, Correlation analysis and Survival
-  analysis (Cox proportional hazard regression). 
+  RNAs, lipids and glycans. CAMPP2 currently supports:
+  replacing missing values, data normalization, batch correction, 
+  distributional check, dimensionality reduction, clustering, 
+  differential expression/abundance analysis, LASSO/Elastic Net regression,
+  random forest, and visualisations
 License: GPL
 Encoding: UTF-8
 LazyData: true
