fix license version
Former-commit-id: 76e14c352064f9d851968ab18703721d3b491a5e [formerly 46470321395d23422dc236719b614fecc2c69071]
Former-commit-id: eb2c3e6f47b3629ab910674441573d716126c405
Former-commit-id: b407ec134e54b4b158ddd96ecde45c7de24d4263
Former-commit-id: 0c199c0c809e8543f6e47c711218c9a6e5dc2fc7
Former-commit-id: b6c24239c532fb5c419630181ba562ca018a2eab
Former-commit-id: 9a4e97533185cb24b65504bc9fe7bf1cea50c7cb

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Description: The CAncer bioMarker Prediction Pipeline2 (CAMPP2) is a simple
   distributional check, dimensionality reduction, clustering, 
   differential expression/abundance analysis, LASSO/Elastic Net regression,
   random forest, and visualisations
-License: GPL
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
