added Thilde to description
Former-commit-id: ff72e5f3fbe39d448b0ada53f7a817dc4078cb20 [formerly dc14aa5e4ac43ddddac48224afa291df5771676f]
Former-commit-id: 3889f02ff5c8362223c39096a7f4090b17f1169c
Former-commit-id: e7198cf8286c6ce0403fdc9211b06c405c4300f9
Former-commit-id: e9db44ab3beff00fc272e7d41faa4a578a792a7f
Former-commit-id: bed19f268d5e22facd4910e4ee98ce534e54a68a [formerly 37a0ff94418e66272be590b45d62ef5c7573300a]
Former-commit-id: 6c1c6fa2b555bb3593b2a277d4903d30538c441c
Former-commit-id: f058d4ddfedff8521ffda82ae306891d2e5e298a

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Version: 0.99.0
 Authors@R: c(
     person("Tom, Nikola", email = "ntom@cancer.dk", role = c("aut")),
     person("Nourbakhsh, Mona", email = "mon@cancer.dk", role = c("aut")),
+    person("Terkelsen, Thilde", role=c("aut")),
     person("Bechgaard, Mathilde Wismann", email = "mathilde@bechgaard.dk", role = c("aut")),
     person("Tiberti, Matteo", email = "tiberti@cancer.dk", role = c("cre", "aut")),
     person("Papaleo, Elena", email = "elenap@cancer.dk", role = c("aut")))
